Fix Dark Mode for remaining elements with checkerboard backgrounds
Summary:
* Replace remaining checkerboard images with repeating-conic-gradient CSS. Note that this is a trade-off between improved Dark Mode and browser compatibility: Such CSS is only supported since Chrome 69/Opera 56 (09/2018), Firefox 83 (11/2020), Safari 12.1 (03/2019), and Edge 79 (01/2020) according to https://caniuse.com/?search=repeating-conic-gradient. Older browsers should see the PNG image file instead, with no Dark Mode improvement here. In the special case of a checkered tag this may lead to decreased readability on such older browsers.
* Introduce Checkerboard patterns variables in CelerityPostprocessors to use the very same two colors for the three checkerboard patterns as the PNG files do.
* Introduce separate text and icon colors `sh-checkeredtext`, `sh-checkeredicon` for checkered tags (was using grey before) to keep text readable on a dark checkerboard pattern background.
* Do not hardcode text-shadow color for checkered tags but use a variable.
* Replace hardcoded white border color with a variable.
* Ignore `alphablack` shadow for now - looks okay.

See similar rP03e8c8ab0cdb.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to PNG image with transparency http://phorge.localhost/F1 and hover over it
* Embed a PNG image file with transparency via `{F1}` markup and hover over it.
* Go to the "Shades" section of http://phorge.localhost/uiexample/view/PHUITagExample/ and look at Checkered tag

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: mainframe98, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26426

--- a/webroot/rsrc/css/application/differential/changeset-view.css
+++ b/webroot/rsrc/css/application/differential/changeset-view.css
@@ -288,12 +288,20 @@ td.cov-I {
 
 .differential-diff td.diff-image-cell {
   background-color: transparent;
-  background-image: url(/rsrc/image/checker_light.png);
+  /* TODO: Remove static image for old browsers some day; see D26155 */
+  background: url('/rsrc/image/checker_light.png');
+  background: repeating-conic-gradient(
+    {$checker.light-one} 0% 25%,
+    {$checker.light-two} 0% 50%) 0 0/20px 20px;
   padding: 8px;
 }
 
 .device-desktop .differential-diff .diff-image-cell:hover {
-  background-image: url(/rsrc/image/checker_dark.png);
+  /* TODO: Remove static image for old browsers some day; see D26155 */
+  background: url('/rsrc/image/checker_dark.png');
+  background: repeating-conic-gradient(
+    {$checker.dark-one} 0% 25%,
+    {$checker.dark-two} 0% 50%) 0 0/20px 20px;
 }
 
 .differential-image-stage {
