--- a/webroot/rsrc/css/application/pholio/pholio-edit.css
+++ b/webroot/rsrc/css/application/pholio/pholio-edit.css
@@ -52,8 +52,8 @@
   /* TODO: Remove static image for old browsers some day; see D26155 */
   background: url('/rsrc/image/checker_lighter.png');
   background: repeating-conic-gradient(
-    {$lightgreybackground} 0% 25%,
-    {$page.content} 0% 50%) 0 0/20px 20px;
+    {$checker.lighter-one} 0% 25%,
+    {$checker.lighter-two} 0% 50%) 0 0/20px 20px;
 }
 
 .device .pholio-thumb-frame {
