--- a/webroot/rsrc/css/phui/phui-image-mask.css
+++ b/webroot/rsrc/css/phui/phui-image-mask.css
@@ -5,10 +5,10 @@
 
 .phui-image-mask {
   /* TODO: Remove static image for old browsers some day; see D26155 */
-  background: url('/rsrc/image/checker_light.png');
+  background: url('/rsrc/image/checker_lighter.png');
   background: repeating-conic-gradient(
-    {$lightgreybackground} 0% 25%,
-    {$page.content} 0% 50%) 0 0/20px 20px;
+    {$checker.lighter-one} 0% 25%,
+    {$checker.lighter-two} 0% 50%) 0 0/20px 20px;
   display: inline-block;
   border: 1px solid {$lightblueborder};
   padding: 4px;
