--- a/webroot/rsrc/css/phui/phui-tag-view.css
+++ b/webroot/rsrc/css/phui/phui-tag-view.css
@@ -405,17 +405,21 @@ a.phui-tag-view:hover.phui-tag-grey .phui-tag-core,
 
 .phui-tag-checkered .phui-tag-core,
 .jx-tokenizer-token.checkered {
-  background: url(/rsrc/image/checker_lighter.png);
+  /* TODO: Remove static image for old browsers some day; see D26155 */
+  background: url('/rsrc/image/checker_lighter.png');
+  background: repeating-conic-gradient(
+    {$checker.lighter-one} 0% 25%,
+    {$checker.lighter-two} 0% 50%) 0 0/20px 20px;
   border-style: dashed;
   border-color: {$sh-greyborder};
-  color: {$sh-greytext};
-  text-shadow: 1px 1px #fff;
+  color: {$sh-checkeredtext};
+  text-shadow: 1px 1px {$page.content};
 }
 
 .phui-tag-checkered .phui-icon-view,
 .jx-tokenizer-token.checkered .phui-icon-view,
 .jx-tokenizer-token.checkered .jx-tokenizer-x {
-  color: {$sh-greyicon};
+  color: {$sh-checkeredicon};
 }
 
 a.phui-tag-view:hover.phui-tag-checkered .phui-tag-core,
